# image-tiff

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: fuzz.yml  rust.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: encode.rs  lzw.rs
docs/public-api/: ABLATION-tiff.md  tiff.features.txt  tiff.internal.txt  tiff.txt
fuzz/: Cargo.toml
fuzz/regression/: crash-d09c970103485fec478e7e3e6a8bf4dd73e60280  crash-fax-group3-subtract-overflow  crash-graydepth-invert-overflow-u16  crash-graydepth-invert-overflow-u32
src/decoder/: image.rs  mod.rs  pluggable.rs  stream.rs
src/encoder/: mod.rs
src/encoder/compression/: deflate.rs
tests/: encode_images_with_compression.rs  fuzz_regression.rs  public_api_doc.rs
